# enterprise-knowledge-agent

./: .env.example  .gitignore  AGENT_CORE_KNOWLEDGE_FROM_CURRENT_PROJECT.md  README.md  pyproject.toml
app/: context.py  main.py
app/agent/: clarifier.py  orchestrator.py  slot_extractor.py
app/api/: chat.py  evaluation.py  knowledge.py  prompts.py  sessions.py  state.py  system.py  ui.py
app/core/: config.py  governance.py  langsmith.py  logging.py
app/db/: init_db.py  session.py
app/embeddings/: local_embedding.py
app/ingestion/: chunker.py  ingest_service.py  markdown_loader.py
app/llm/: base.py  client.py
app/memory/: session_store.py
app/models/: kb_chunk.py  kb_document.py  session_message.py  session_state.py
app/observability/: __init__.py  context.py  metrics.py  tracing.py
app/prompts/: prompts.yaml  registry.py
app/rag/: reranker.py  retriever.py  vector_retriever.py
app/repositories/: kb_chunk_repo.py  kb_document_repo.py  session_state_repo.py
app/router/: intent_router.py  llm_router.py
app/schemas/: agent.py  chat.py  evaluation.py
app/security/: access_control.py  content_guard.py  redaction.py
app/services/: chat_service.py  evaluation_service.py  session_state_service.py
app/tools/: interview_tools.py  org_tool.py  ticket_tool.py  workflow_tool.py
app/web/: index.html
data/: knowledge_docs.json
docs/: interview-agent-workflow.md
src/eka/: __init__.py  __main__.py
src/eka/agents/: __init__.py  interview_agent.py
src/eka/api/: __init__.py  app.py
src/eka/config/: __init__.py  (+2 more)
tests/: conftest.py  test_agent_flow.py  test_agent_orchestrator.py  test_api.py  test_cli.py  test_prompt_governance_evaluation.py  test_providers.py  test_retriever.py  test_router_planner.py  test_security_access_and_promptops.py  test_settings.py  test_ui.py
(+22 files in other folders)
