[project]
name = "enterprise-knowledge-agent"
version = "0.1.0"
description = "A fast-start, extensible enterprise knowledge agent scaffold with an interview assistant example"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.136.0",
    "langsmith>=0.7.32",
    "markdown>=3.10.2",
    "openai>=2.32.0",
    "pgvector>=0.4.2",
    "pyyaml>=6.0.2",
    "psycopg>=3.3.3",
    "pydantic>=2.13.2",
    "pydantic-settings>=2.13.1",
    "redis>=6.0.0",
    "sentence-transformers>=5.4.1",
    "sqlalchemy>=2.0.49",
    "torch>=2.11.0",
    "transformers>=5.5.4",
    "uvicorn>=0.44.0",
    "langgraph>=1.1.9",
    "langchain>=1.2.15",
    "langchain-openai>=1.1.16",
]

[project.scripts]
eka-api = "eka.api.app:main"
eka-demo = "eka.__main__:main"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eka"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

